--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/a_Pide_y_muestra_numero/Main.java=UTF-8
+encoding//src/b_Area_y_perimetro/Main.java=UTF-8
