--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,12 @@ eclipse.preferences.version=1
 encoding//src/a_Pide_y_muestra_numero/Main.java=UTF-8
 encoding//src/b_Area_y_perimetro/Main.java=UTF-8
 encoding//src/c_Media_aritmetica/Main.java=UTF-8
+encoding//src/d_if_Vocales_Consonantes/Vocales_consonantes.java=UTF-8
+encoding//src/e_for_patron_diamante/Patron_diamante.java=UTF-8
+encoding//src/f_switch_dias_mes/Dias_mes.java=UTF-8
+encoding//src/g_construc_getters_setters_Persona/Main.java=UTF-8
+encoding//src/g_construc_getters_setters_Persona/Persona.java=UTF-8
+encoding//src/h_construc_getters_setters_Empleado/Empleado.java=UTF-8
+encoding//src/h_construc_getters_setters_Empleado/Main.java=UTF-8
+encoding//src/i_arraylist_books/Book.java=UTF-8
+encoding//src/i_arraylist_books/Main.java=UTF-8
