--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -11,3 +11,5 @@ encoding//src/h_construc_getters_setters_Empleado/Empleado.java=UTF-8
 encoding//src/h_construc_getters_setters_Empleado/Main.java=UTF-8
 encoding//src/i_arraylist_books/Book.java=UTF-8
 encoding//src/i_arraylist_books/Main.java=UTF-8
+encoding//src/j_sobrecarga_Medias/Main.java=UTF-8
+encoding//src/j_sobrecarga_Medias/Media.java=UTF-8
